--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
-	"ip":"origincraftz.aternos.me",
-	"port": "53680",
-	"name": "Delta1"
+	"ip":"Stake69.aternos.me",
+	"port": "64787",
+	"name": "Urfi_Javed"
 }
